Added basic listening and speeking.

--- a/ariane/templates/base.html
+++ b/ariane/templates/base.html
@@ -63,6 +63,7 @@
         <p>&copy; ariane 2016</p>
       </footer>
     </div> <!-- /container -->
+        <script src="{% static "js/vendor/responsivevoice.js" %}"></script>
         <script src="{% static "js/vendor/jquery-1.11.0.min.js" %}"></script>
 
         <script src="{% static "js/vendor/bootstrap.min.js" %}"></script>
