--- a/ariane/static/scss/main.scss
+++ b/ariane/static/scss/main.scss
@@ -1,7 +1,122 @@
 @import "../../../node_modules/foundation-sites/scss/foundation";
 
 @include foundation-global-styles;
-@include foundation-grid;
+@include foundation-flex-classes;
+@include foundation-flex-grid;
 @include foundation-media-object;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
+
+@import "components/settings";
+@import "components/mixins";
+
+html, body, #content {
+  height: 100%;
+  background-color: #000000;
+  overflow: hidden;
+  color: $ARIANE_BACKGROUND;
+}
+
+#content .row {
+  height: 100%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
+}
+
+#ariane {
+  margin-top: 2em;
+
+  .arc {
+    margin: 0 auto;
+    @include border-radius(50%);
+    padding: 5px;
+    border: 5px solid transparent;
+    transition: border 500ms linear;
+  }
+  .first_arc {
+    width: 150px;
+    height: 150px;
+    border-top-color: $ARIANE_BACKGROUND_INACTIVE;
+    &.invis_arc {
+      border-top-color: transparent;
+    }
+    &.animated {
+      animation: rotate_clockwise 10s linear infinite;
+    }
+  }
+  &.active .first_arc {
+    border-top-color: $ARIANE_BACKGROUND;
+  }
+
+  .second_arc {
+    width: 130px;
+    height: 130px;
+    border-left-color: $ARIANE_BACKGROUND_INACTIVE;
+    border-right-color: $ARIANE_BACKGROUND_INACTIVE;
+    &.invis_arc {
+      border-left-color: transparent;
+      border-right-color: transparent;
+    }
+    &.animated {
+      animation: rotate_counterclockwise 5s linear infinite;
+    }
+  }
+  &.active .second_arc {
+    border-left-color: $ARIANE_BACKGROUND;
+    border-right-color: $ARIANE_BACKGROUND;
+  }
+
+  .third_arc {
+    width: 110px;
+    height: 110px;
+    border-top-color: $ARIANE_BACKGROUND_INACTIVE;
+    border-bottom-color: $ARIANE_BACKGROUND_INACTIVE;
+    &.invis_arc {
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+    }
+    &.animated {
+      animation: rotate_clockwise 2s linear infinite;
+    }
+  }
+  &.active .third_arc {
+    border-top-color: $ARIANE_BACKGROUND;
+    border-bottom-color: $ARIANE_BACKGROUND;
+  }
+
+  .fourth_arc {
+    width: 90px;
+    height: 90px;
+    border-left-color: $ARIANE_BACKGROUND_INACTIVE;
+    border-top-color: $ARIANE_BACKGROUND_INACTIVE;
+    &.invis_arc {
+      border-left-color: transparent;
+      border-top-color: transparent;
+    }
+    &.animated {
+      animation: rotate_counterclockwise 3s linear infinite;
+    }
+  }
+  &.active .fourth_arc {
+    border-left-color: $ARIANE_BACKGROUND;
+    border-top-color: $ARIANE_BACKGROUND;
+  }
+
+  .core {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    @include border-radius(50%);
+    background-color: $ARIANE_BACKGROUND_INACTIVE;
+    box-shadow: 0px 0px 75px 15px $ARIANE_BACKGROUND_INACTIVE;
+    transition: background 1s linear;
+  }
+  &.active .core {
+    background-color: $ARIANE_BACKGROUND;
+    border-color: $ARIANE_BACKGROUND;
+    animation: pulsing 2s linear infinite;
+    box-shadow: 0px 0px 90px 30px $ARIANE_BACKGROUND;
+  }
+}
