--- a/ariane/static/scss/main.scss
+++ b/ariane/static/scss/main.scss
@@ -10,6 +10,10 @@
 @import "components/settings";
 @import "components/mixins";
 
+* {
+  font-family: 'Rajdhani', sans-serif;
+}
+
 html, body, #content {
   height: 100%;
   background-color: #000000;
@@ -17,12 +21,17 @@ html, body, #content {
   color: $ARIANE_BACKGROUND;
 }
 
-#content .row {
-  height: 100%;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: initial;
+#content {
+  .row {
+    height: 100%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: initial;
+    .columns {
+      height: 100%
+    }
+  }
 }
 
 #ariane {
@@ -33,7 +42,7 @@ html, body, #content {
     @include border-radius(50%);
     padding: 5px;
     border: 5px solid transparent;
-    transition: border 500ms linear;
+    @include transition(border 500ms linear);
   }
   .first_arc {
     width: 150px;
@@ -110,13 +119,32 @@ html, body, #content {
     margin: 0 auto;
     @include border-radius(50%);
     background-color: $ARIANE_BACKGROUND_INACTIVE;
-    box-shadow: 0px 0px 75px 15px $ARIANE_BACKGROUND_INACTIVE;
-    transition: background 1s linear;
+    box-shadow: 0px 0px 85px 15px $ARIANE_BACKGROUND_INACTIVE;
+    @include transition(background 1s linear);
   }
   &.active .core {
     background-color: $ARIANE_BACKGROUND;
     border-color: $ARIANE_BACKGROUND;
-    animation: pulsing 2s linear infinite;
-    box-shadow: 0px 0px 90px 30px $ARIANE_BACKGROUND;
+    box-shadow: 0px 0px 85px 15px $ARIANE_BACKGROUND;
   }
+  &.active.listening .core {
+    animation: pulsing 3s linear infinite;
+  }
+  &.active.speaking .core {
+    animation: pulsing 1s linear infinite;
+  }
+}
+
+.info-text-box {
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 0.6em;
+  padding-bottom: 0.6em;
+  margin-top: 2em;
+  border: 1px solid $ARIANE_BACKGROUND;
+}
+
+.info-text-box {
+  min-height: 46px;
+  @include transition(width 500ms);
 }
