--- a/ariane/templates/base.html
+++ b/ariane/templates/base.html
@@ -13,6 +13,7 @@
   <title>ariane - {% block title %}{% endblock %}</title>
   <meta name="description" content="A short description of the project.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type='text/css'>
   <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 
@@ -29,6 +30,7 @@
 
   <script src="{% static "js/vendor/compiled.js" %}"></script>
   <script src="{% static "js/vendor/responsivevoice.js" %}"></script>
+  <script src="{% static "js/helpers/lbl.js" %}"></script>
 
   {% block script %}{% endblock %}
 
