--- a/ariane/apps/frontend/templates/frontend/ariane.html
+++ b/ariane/apps/frontend/templates/frontend/ariane.html
@@ -10,9 +10,6 @@
 
 {% block js_templates %}
 <script type="text/html" id="empty"></script>
-<script type="text/html" id="infoText">
-  <div class="info-text-box" data-bind="lbylText: text"></div>
-</script>
 {% for js_file, template_id in extra_templates %}
 <script
   {% if template_id %}type="text/html" id="{{ template_id }}"{% endif %}
@@ -33,7 +30,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="content">
+<div id="content" data-bind="css: {active: active, listening: listening, speaking: speaking}">
   <div class="row show-for-small-only">
     <div class="small-12 columns">
       ARIANE ON SMALL
@@ -45,11 +42,11 @@
       </div>
     </div>
     <div class="small-6 columns">
-      <div data-bind="template: { name: centerTopTemplate, data: centerTopData }"></div>
-      <div data-bind="template: { name: centerBottomTemplate, data: centerBottomData }"></div>
+      <div class="info-text-box" data-bind="lbylText: message"></div>
+      <div data-bind="template: { name: centerTemplate, data: centerData }"></div>
     </div>
     <div class="small-3 columns">
-      <div id="ariane" data-bind="css: {active: active, listening: listening, speaking: speaking}">
+      <div id="ariane">
         <div class="arc first_arc invis_arc">
           <div class="arc second_arc invis_arc">
             <div class="arc third_arc invis_arc">
@@ -60,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div data-bind="template: { name: rightTemplate, data: centerBottomData }"></div>
+      <div data-bind="template: { name: rightTemplate, data: rightData }"></div>
     </div>
   </div>
 </div>
