Fixed instantiation of ariane.

--- a/ariane/templates/base.html
+++ b/ariane/templates/base.html
@@ -31,6 +31,7 @@
   <script src="{% static "js/vendor/compiled.js" %}"></script>
   <script src="{% static "js/vendor/responsivevoice.js" %}"></script>
   <script src="{% static "js/helpers/lbl.js" %}"></script>
+  <script src="{% static "js/helpers/obj-keys.js" %}"></script>
 
   {% block script %}{% endblock %}
 
