--- a/ariane/apps/frontend/templates/frontend/ariane.html
+++ b/ariane/apps/frontend/templates/frontend/ariane.html
@@ -22,7 +22,7 @@
   <script src="{% static "js/main.js" %}"></script>
   <script type="text/javascript">
   $(document).ready(function () {
-    var ariane = new Ariane(userLanguage);
+    window['ariane'] = new Ariane(userLanguage);
     ariane.initialize();
   });
   </script>
