--- a/ariane/apps/frontend/templates/frontend/ariane.html
+++ b/ariane/apps/frontend/templates/frontend/ariane.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="content" data-bind="css: {active: active, listening: listening, speaking: speaking}">
+<div id="content" data-bind="css: {connected: connected, listening: listening, speaking: speaking}">
   <div class="row show-for-small-only">
     <div class="small-12 columns">
       ARIANE ON SMALL
