frontend: fixed frontend debuging line.
I'm considering moving it from a "debugging line" to a configurable
setting.

--- a/ariane/apps/frontend/templates/frontend/ariane.html
+++ b/ariane/apps/frontend/templates/frontend/ariane.html
@@ -29,7 +29,7 @@
       e.preventDefault();
       field = $(this).find('input');
       if (ariane.connected()) {
-        ariane.send(field.val());
+        ariane.handle_transcription(field.val());
         field.val('');
       }
     });
