--- a/ariane/static/scss/components/settings.scss
+++ b/ariane/static/scss/components/settings.scss
@@ -1,4 +1,7 @@
-$ARC_RADIUS: 50px;
+$ARC_RADIUS: 50%;
 
 $ARIANE_BACKGROUND: #A3DBE3;
 $ARIANE_BACKGROUND_INACTIVE: #CCCCCC;
+
+$BASIC_BORDER_RADIUS: 10px;
+$BASIC_BORDER_SIZE: 2px;
