--- a/ariane/templates/account/signup.html
+++ b/ariane/templates/account/signup.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
+{% block account_content %}
 <div id="content">
   <div class="row align-center">
     <div class="medium-6 small-12 columns">
