--- a/ariane/static/scss/main.scss
+++ b/ariane/static/scss/main.scss
@@ -7,6 +7,7 @@
 @include foundation-flex-classes;
 @include foundation-flex-grid;
 @include foundation-media-object;
+@include foundation-menu;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
 
@@ -37,6 +38,7 @@ input {
   }
 }
 
+.row {width: 100%; max-width: initial;}
 
 ul {
   margin-top: 0;
@@ -89,10 +91,8 @@ p {
     }
 
     opacity: 1;
-    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    max-width: initial;
   }
 }
 
