--- a/ariane/templates/account/password_reset.html
+++ b/ariane/templates/account/password_reset.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block account_content %}
 <div id="content">
   <div class="row align-center">
     <div class="medium-6 small-12 columns">
