--- a/ariane/apps/frontend/templates/frontend/index.html
+++ b/ariane/apps/frontend/templates/frontend/index.html
@@ -1,21 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 
-{% block content %}
-<div id="content">
-  <div class="row align-center">
-    <div class="medium-6 small-12 columns">
-      <div class="border-box">
-        <h1>Landingpage</h1>
-        {% if user.is_authenticated %}
-        <a href="{% url 'ariane' %}">Ariane</a>
-        <a href="#features">Settings</a>
-        <a href="{% url 'account_logout' %}">Logout</a>
-        {% else %}
-        <a href="{% url 'account_login' %}">Login</a>
-        <a href="{% url 'account_signup' %}">Register</a>
-        {% endif %}
-      </div>
-    </div>
-  </div>
-</div>
+{% block account_content %}
+<h1>Landingpage</h1>
+
+{% if user.is_authenticated %}
+  <a href="{% url 'ariane' %}">Ariane</a>
+  <a href="{% url 'user_settings' %}">Settings</a>
+  <a href="{% url 'account_logout' %}">Logout</a>
+{% else %}
+  <a href="{% url 'account_login' %}">Login</a>
+  <a href="{% url 'account_signup' %}">Register</a>
+{% endif %}
+
 {% endblock %}
